# mio-serial

./: .travis.yml  Cargo.toml  README.adoc  index.html  search-index.js
examples/: tail.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.AsRef.js  trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/iter/iterator/: trait.Iterator.js
implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
implementors/core/ops/: trait.Drop.js
implementors/std/error/: trait.Error.js
implementors/std/io/: trait.Read.js  trait.Write.js
implementors/std/sys/imp/ext/io/: trait.AsRawFd.js
mio_serial/: index.html  struct.SerialPort.html
src/: bin.rs  lib.rs
src/mio_serial/src/: lib.rs.html
tests/: simple.rs
