[package]
name = "mio-serial"
version = "0.1.0"
license = "MIT"
authors = ["Tae-il Lim <trlim@iotok.kr>"]
description = "Extends serial-rs for mio"
homepage = "https://github.com/trlim/mio-serial"
repository = "https://github.com/trlim/mio-serial"
keywords = ["mio", "serial"]

[dependencies]
mio = "0.6"
serial = { git = "https://github.com/trlim/serial-rs", branch = "tokio" }
dotenv = "0.8"

[lib]
path = "src/lib.rs"

[[bin]]
name = "serio"
path = "src/bin.rs"
