[package]
name = "mio-serial"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["Tae-il Lim <trlim@iotok.kr>"]
readme = "README.adoc"
homepage = "https://github.com/trlim/mio-serial"
repository = "https://github.com/trlim/mio-serial"
documentation = "https://trlim.github.io/mio-serial"
keywords = ["mio", "serial"]
description = """
Binding for serial-rs and mio
"""

[dependencies]
mio = "0.6"
serial = { git = "https://github.com/trlim/serial-rs", branch = "tokio" }

[dev-dependencies]
dotenv = "0.8"

[lib]
path = "src/lib.rs"
